Remove api-java and combine Java API with Scala API, add in plan end to end test, ensure all tests get run, fix jms and http sink tests